--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* From Uiverse.io by cybrejon */ 
-a {
+button {
     color: rgba(255, 255, 255, 0.692);
     padding: 10px 15px;
     display: flex;
@@ -17,7 +17,7 @@ a {
     border: 1px solid transparent;
   }
  
-  a:hover {
+  button:hover {
     border-color: rgba(255, 255, 255, 0.623);
     background: linear-gradient(
       to bottom,
@@ -29,7 +29,7 @@ a {
     transform: translateY(-6px);
   }
   
-  a:active {
+  button:active {
     transform: translateY(2px);
     box-shadow: none;
   }
